HTML/CSS first commit

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lama</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="plugins/fontawesome/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="drag-down">
+    <i class="fa fa-ellipsis-h  fa-lg"></i>
+</div>
 
+<div class="content">
+    <br>
+    <h3>Laat wat achter!</h3>
+    <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias distinctio est fugit harum laborum reiciendis
+       vel! Ad adipisci aliquid, blanditiis dicta et incidunt maxime, nobis officiis quasi qui, suscipit unde.</p>
+
+</div>
+
+<div class="arrow-up">
+    <img src= images/arrow-up.png>
+</div>
+
+<div class="nav">
+    <ul>
+        <li><a href="#"><i class="fa fa-camera fa-3x"></i></a></li>
+        <li><a href="#"><i class="fa fa-file-text fa-3x"></i></a></li>
+        <li><a href="#"><i class="fa fa-comment fa-3x"></i></a></li>
+        <li><a href="#"><i class="fa fa-music fa-3x"></i></a></li>
+    </ul>
+</div>
 </body>
 </html>
