Style updated, scroll added

--- a/index.html
+++ b/index.html
@@ -3,35 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Lama</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/icons.css">
     <link rel="stylesheet" href="plugins/fontawesome/css/font-awesome.min.css">
+    <script src="plugins/js/modernizr.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body data-hijacking="on" data-animation="rotate">
 <div class="drag-down">
     <i class="fa fa-ellipsis-h  fa-lg"></i>
 </div>
 
-<div class="content">
-    <br>
-    <h3>Laat wat achter!</h3>
-    <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias distinctio est fugit harum laborum reiciendis
-       vel! Ad adipisci aliquid, blanditiis dicta et incidunt maxime, nobis officiis quasi qui, suscipit unde.</p>
+<section>
+    <div id="intro" class="cd-section">
+        <br>
+        <h3>Laat wat achter!</h3>
+        <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias distinctio est fugit harum laborum reiciendis
+    vel! Ad adipisci aliquid, blanditiis dicta et incidunt maxime, nobis officiis quasi qui, suscipit unde.</p>
 
-</div>
+        <div class="arrow-down">
+            <button type="button" class="down"><img src= images/arrow-down.png></button>
+        </div>
 
-<div class="arrow-up">
-    <img src= images/arrow-up.png>
-</div>
+    </div>
+
+</section>
+
+
+<section>
+    <div id="exp" class="cd-section">
+        <br>
+        <h3>Uitleg</h3>
+        <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias distinctio est fugit harum laborum reiciendis
+            vel! Ad adipisci aliquid, blanditiis dicta et incidunt maxime, nobis officiis quasi qui, suscipit unde.</p>
+
+        <div class="arrow-down">
+            <button type="button" class="up"><img src= images/arrow-up.png></button>
+        </div>
+
+    </div>
+</section>
+
 
 <div class="nav">
     <ul>
-        <li><a href="#"><i class="fa fa-camera fa-3x"></i></a></li>
-        <li><a href="#"><i class="fa fa-file-text fa-3x"></i></a></li>
-        <li><a href="#"><i class="fa fa-comment fa-3x"></i></a></li>
-        <li><a href="#"><i class="fa fa-music fa-3x"></i></a></li>
+        <li><a href="#"><i id="camera" class="fa fa-camera fa-3x"></i></a></li>
+        <li><a href="#"><i id="text" class="fa fa-file-text fa-3x"></i></a></li>
+        <li><a href="#"><i id="quote" class="fa fa-comment fa-3x"></i></a></li>
+        <li><a href="#"><i id="music" class="fa fa-music fa-3x"></i></a></li>
     </ul>
 </div>
+
+
+    <!-- Scripts -->
+    <script src="plugins/js/jquery-2.1.4.js"></script>
+    <script src="js/main.js"></script>
+    <script src="plugins/js/velocity.min.js"></script>
+    <script src="plugins/js/velocity.ui.min.js"></script>
+    <script src="plugins/js/main.js"></script>
 </body>
 </html>
