--- a/index.html
+++ b/index.html
@@ -15,52 +15,26 @@
     <i class="fa fa-ellipsis-h  fa-lg"></i>
 </div>
 
-<section>
-    <div id="intro" class="cd-section">
-        <br>
-        <h3>Laat wat achter!</h3>
-        <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias distinctio est fugit harum laborum reiciendis
-    vel! Ad adipisci aliquid, blanditiis dicta et incidunt maxime, nobis officiis quasi qui, suscipit unde.</p>
+<div id="content">
 
-        <div class="arrow-down">
-            <button type="button" class="down"><img src= images/arrow-down.png></button>
-        </div>
-
-    </div>
-
-</section>
-
-
-<section>
-    <div id="exp" class="cd-section">
-        <br>
-        <h3>Uitleg</h3>
-        <p><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias distinctio est fugit harum laborum reiciendis
-            vel! Ad adipisci aliquid, blanditiis dicta et incidunt maxime, nobis officiis quasi qui, suscipit unde.</p>
-
-        <div class="arrow-down">
-            <button type="button" class="up"><img src= images/arrow-up.png></button>
-        </div>
-
-    </div>
-</section>
-
+</div>
 
 <div class="nav">
     <ul>
-        <li><a href="#"><i id="camera" class="fa fa-camera fa-3x"></i></a></li>
-        <li><a href="#"><i id="text" class="fa fa-file-text fa-3x"></i></a></li>
-        <li><a href="#"><i id="quote" class="fa fa-comment fa-3x"></i></a></li>
-        <li><a href="#"><i id="music" class="fa fa-music fa-3x"></i></a></li>
+        <li><a href="camera"><i id="camera" class="fa fa-camera fa-3x"></i></a></li>
+        <li><a href="text"><i id="text" class="fa fa-file-text fa-3x"></i></a></li>
+        <li><a href="quote"><i id="quote" class="fa fa-comment fa-3x"></i></a></li>
+        <li><a href="music"><i id="music" class="fa fa-music fa-3x"></i></a></li>
     </ul>
 </div>
 
 
     <!-- Scripts -->
     <script src="plugins/js/jquery-2.1.4.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/load.js"></script>
     <script src="plugins/js/velocity.min.js"></script>
     <script src="plugins/js/velocity.ui.min.js"></script>
     <script src="plugins/js/main.js"></script>
+    <script src="js/scroll.js"></script>
 </body>
 </html>
