Mobile test 2, photo upload finished

--- a/camera.html
+++ b/camera.html
@@ -1,12 +1,21 @@
 <section>
     <div id="exp" class="cd-section">
+        <div class="page-nav">
+            <a href="home"><img class="left" src="images/arrow-left.png"></a>
+            <a href="upload"><img class="right" src="images/arrow-right.png"></a>
+        </div>
+
         <br>
-        <h2>Foto</h2><br>
+        <h2 class="margin">Foto</h2><br>
 
-            <br><div id="img"><img src="images/instagram.png"></div>
-            <div id="link"><a href="https://www.instagram.com/"> Log in met <br>instagram</a></div>
+            <br><div class="img"><img src="images/instagram.png"></div>
+            <div class="link"><a href="https://www.instagram.com/"> Log in met <br>instagram</a></div>
             <div id="or">Of</div>
-
+            <div class="img"><img src="images/photo.png"></div>
+            <div class="link"><input id="upload" type="file"/><a href="" id="upload_link">Kies een foto...</a>​</div>
 
     </div>
 </section>
+
+<script src="js/file-upload.js"></script>
+<script src="js/load.js"></script>
