--- a/upload.html
+++ b/upload.html
@@ -1,4 +1,4 @@
-<section>
+<section xmlns="http://www.w3.org/1999/html">
     <div id="exp" class="cd-section">
         <div class="page-nav">
             <a href="camera"><img class="left" src="images/arrow-left.png"></a>
@@ -11,7 +11,7 @@
         <br><div class="placeholder"><img style="height: 100%; display: inline-block" src="images/placeholder.png"></div>
 
         <div class="text-input">
-            <input type="text" name="description" id="description" placeholder="Schrijf een onderschrift...">
+            <textarea name="description" id="description" placeholder="Schrijf een onderschrift..."</textarea>
         </div>
 
 
