--- a/upload.html
+++ b/upload.html
@@ -11,7 +11,7 @@
         <br><div class="placeholder"><img style="height: 100%; display: inline-block" src="images/placeholder.png"></div>
 
         <div class="text-input">
-            <textarea name="description" id="description" placeholder="Schrijf een onderschrift..."</textarea>
+            <textarea name="description" id="description" placeholder="Schrijf een onderschrift..."></textarea>
         </div>
 
 
