--- a/Arduino/index.html
+++ b/Arduino/index.html
@@ -43,22 +43,22 @@
 	<section class="preference2">
 
 		<div>
-			<div class="caption red2">Red</div>
-			<label for="red" class="brightness fa">
+			<div class="caption red2">Red 2</div>
+			<label for="red2" class="brightness fa">
 				<input id="red2" type="range" min="1" max="255" step="1" value="0">
 			</label>
 		</div>
 
 		<div>
-			<div class="caption green2">Green</div>
-			<label for="green" class="brightness fa">
+			<div class="caption green2">Green 2</div>
+			<label for="green2" class="brightness fa">
 				<input id="green2" type="range" min="1" max="255" step="1" value="0">
 			</label>
 		</div>
 
 		<div>
-			<div class="caption blue2">Blue</div>
-			<label for="blue" class="brightness fa">
+			<div class="caption blue2">Blue 2</div>
+			<label for="blue2" class="brightness fa">
 				<input id="blue2" type="range" min="1" max="255" step="1" value="0">
 			</label>
 		</div>
@@ -70,7 +70,8 @@
 (function(){
 
 	var settings = {
-		channel: 'Channel-u7cd341a3',
+		channel2: 'Channel-dfghjkjhgfd',
+		channel: 'Channel-zq7jdibrr',
 		publish_key: 'pub-c-6ec1bade-3025-42e6-b4f7-a953fee47d4c',
 		subscribe_key: 'sub-c-74c85f44-f100-11e5-8112-02ee2ddab7fe'
 	};
@@ -81,10 +82,23 @@
 	var green = document.getElementById('green');
 	var blue = document.getElementById('blue');
 
+	var red2 = document.getElementById('red2');
+	var green2 = document.getElementById('green2');
+	var blue2 = document.getElementById('blue2');
+
 	function publishUpdate(data) {
 		pubnub.publish({
-			channel: settings.channel, 
+			channel: settings.channel,
 			message: data
+
+		});
+	}
+
+	function publishUpdate2(data) {
+		pubnub.publish({
+			channel: settings.channel,
+			message: data
+
 		});
 	}
 
@@ -102,6 +116,17 @@
 		publishUpdate({color: 'blue', brightness: +this.value});
 	}, false);
 
+	red2.addEventListener('change', function(e){
+		publishUpdate2({color: 'red2', brightness: +this.value});
+	}, false);
+
+	green2.addEventListener('change', function(e){
+		publishUpdate2({color: 'green2', brightness: +this.value});
+	}, false);
+
+	blue2.addEventListener('change', function(e){
+		publishUpdate2({color: 'blue2', brightness: +this.value});
+	}, false);
 })();
 	</script>
 	
